karpenter-mpol/add-karpenter-donot-evict/.kyverno-test/exception-resource.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: exception-job
spec:
  template:
    spec:
      containers: [{name: worker, image: busybox:1.36}]
      restartPolicy: Never
