karpenter-mpol/add-karpenter-donot-evict/.kyverno-test/exceptions.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: karpenter-donot-evict-exception
  namespace: policy-exceptions
spec:
  policyRefs:
  - name: add-karpenter-donot-evict
    kind: MutatingPolicy
  matchConditions:
  - name: exact-resource
    expression: object.metadata.namespace == 'default' && object.metadata.name == 'exception-job'
