karpenter-mpol/add-karpenter-donot-evict/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-karpenter-donot-evict
policies:
- ../add-karpenter-donot-evict.yaml
resources:
- resource.yaml
- exception-resource.yaml
exceptions:
- exceptions.yaml
results:
- kind: CronJob
  patchedResources: patched02.yaml
  policy: add-karpenter-donot-evict
  resources:
  - addcronjob01
  result: pass
  isMutatingPolicy: true
- kind: Job
  policy: add-karpenter-donot-evict
  resources:
  - exception-job
  result: skip
  isMutatingPolicy: true
- kind: Job
  patchedResources: patched01.yaml
  policy: add-karpenter-donot-evict
  resources:
  - addjob01
  result: pass
  isMutatingPolicy: true
